Emmie: Steal books to read at night
