# Models/AssetManagement.cs
@@ -10,7 +10,7 @@ namespace XR5_0TrainingRepo.Models
         public string? Description { get; set; }
         public string? OwncloudFileName { get; set; }
         public string? OwncloudPath { get; set; }
-        public string? AppName { get; set; }
+        public string? TennantName { get; set; }
         public string? TrainingName { get; set; }
         public string? ResourceId { get; set; } 
         public string? ParentId {get; set;}
