# Models/OwncloudFile.cs
@@ -4,28 +4,28 @@ using XR5_0TrainingRepo.Models;
 
 namespace XR5_0TrainingRepo.Models
 {
-    enum ShareType{
+    public enum ShareType{
         Group,
         User
     }
     public class Share
     {
-        ShareType Type { get; set;}
-        string Target {get; set;}
+        public ShareType Type { get; set;}
+        public string Target {get; set;}
     }
     public class OwncloudFile
     {
-
+        public string TennantName;
         public string? Path { get; set; }
         public string? Description { get; set; }
         public string? OwncloudFileName { get; set; }
         public virtual List<Share>? ShareList { get; set; }
-
+        
         [Key]
-        public string ShareId { get; set; }
+        public string FileId { get; set; }
         public OwncloudFile()
         {
-            ShareId= Guid.NewGuid().ToString();
+            FileId= Guid.NewGuid().ToString();
         }
     }
 }
