# Models/TrainingModule.cs
@@ -6,7 +6,7 @@ using XR5_0TrainingRepo.Models;
 
 namespace XR5_0TrainingRepo.Models
 {
-    [PrimaryKey(nameof(AppName), nameof(TrainingName))]
+    [PrimaryKey(nameof(TennantName), nameof(TrainingName))]
     public class TrainingModule
     {
 
@@ -17,7 +17,7 @@ namespace XR5_0TrainingRepo.Models
         public virtual List<string>? ResourceList { get; set; }
         [ForeignKey("Assets")]
         public virtual List<string>? AssetList { get; set; }
-        public string AppName { get; set; }
+        public string TennantName { get; set; }
         public string TrainingName { get; set; }
          
         public TrainingModule()
