# Models/XR50RepoContext.cs
@@ -10,7 +10,7 @@ namespace XR5_0TrainingRepo.Models
         {
         }
 
-        public DbSet<XR50App> Apps { get; set; } = null!;
+        public DbSet<XR50Tennant> Apps { get; set; } = null!;
 	    public DbSet<User> Users { get; set; } = null!;
 	    public DbSet<TrainingModule> Trainings { get; set; } = null!;
 	    public DbSet<Material> Resources { get; set; } = null!;
